--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
          style="width: 100%; max-width: 350px; border-radius: 18px; box-shadow: 0 6px 18px rgba(0,0,0,0.3); object-fit: cover;">
     <img src="IMAGENES/sala_vacia.jpeg" 
          style="width: 100%; max-width: 350px; border-radius: 18px; box-shadow: 0 6px 18px rgba(0,0,0,0.3); object-fit: cover;">
-    <img src="IMAGENES/trabajando.jpg" 
+    <img src="IMAGENES/trabajando.JPG" 
          style="width: 100%; max-width: 350px; border-radius: 18px; box-shadow: 0 6px 18px rgba(0,0,0,0.3); object-fit: cover;">
   </div>
 </section>
@@ -402,5 +402,6 @@
 
 </body>
 </html>
+
 
 
