--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
     <div class="espacio"></div>
 
     <p style="color:black;">14:00 - 14:45   Ser Médico en el Perú<br>
-    <span style="display:block; padding-left:100px; color:black;">Dr. César Augusto Sapaico Castillo</span></p>
+    <span style="display:block; padding-left:100px; color:black;">Dr. César Augusto Sapaico Del Castillo</span></p>
     <p style="color:black;">14:45 - 15:30   Preclamsia Presente y Futura<br>
-    <span style="display:block; padding-left:100px; color:black;">Dr. Justo Taco Cordero</span></p>
+    <span style="display:block; padding-left:100px; color:black;">Dr. Justo Taco Cornejo</span></p>
     <p style="color:black;">15:30 - 16:15   Neumotórax<br>
     <span style="display:block; padding-left:100px; color:black;">Dra. Jacky Arce Portillo</span></p>
     <p style="color:black;">16:15 - 17:00   Pilares de la Ética<br>
@@ -388,10 +388,10 @@
         <img src="IMAGENES/COLEG FARMACEUTICO.jpeg" style="width:110px; height:110px; object-fit:contain;">
         <p style="color:black; margin-top:5px; font-size:14px;">Colegio de Farmacéuticos del Perú</p>
       </div>
-      <div style="text-align:center;">
+      <!--div style="text-align:center;">
         <img src="IMAGENES/COLEG ENFERMEROS.jpeg" style="width:110px; height:110px; object-fit:contain;">
         <p style="color:black; margin-top:5px; font-size:14px;">Colegio de Enfermeros del Perú</p>
-      </div>
+    </div-->
     </div>
   </section>
 
@@ -402,6 +402,7 @@
 
 </body>
 </html>
+
 
 
 
