--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
     <p style="color:black;">19:30&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EXAMEN</p>
   </div>
 
-  <!-- Columna derecha: imágenes -->
-  <div style="
+  <style>
+  .imagenes-laterales {
     flex-basis: 30%;
     display: flex;
     flex-direction: column;
@@ -268,7 +268,26 @@
     justify-content: center;
     gap: 80px;
     margin-top: 150px;
-  ">
+  }
+
+  /* Ajuste para pantallas pequeñas (celulares) */
+  @media (max-width: 768px) {
+    .imagenes-laterales {
+      flex-basis: 100%;
+      margin-top: 50px;
+      gap: 30px;
+    }
+
+    .imagenes-laterales img {
+      width: 90%; /* agranda las imágenes en móviles */
+      height: auto;
+    }
+  }
+</style>
+
+
+
+<div class="imagenes-laterales">    
     <img src="IMAGENES/fachada.jpg" 
          style="width: 100%; max-width: 350px; border-radius: 18px; box-shadow: 0 6px 18px rgba(0,0,0,0.3); object-fit: cover;">
     <img src="IMAGENES/sala_operaciones.jpeg" 
@@ -404,9 +423,33 @@
   <footer style="text-align:center; padding:40px 20px; background:transparent; margin-top:40px;">
  
   </footer>
+<style>
+  /* --- IMÁGENES LATERALES --- */
+  .imagenes-laterales img {
+    width: 250px;   /* tamaño normal en computadora */
+    height: auto;
+    border-radius: 12px;
+    margin: 10px;
+    transition: transform 0.3s ease;
+  }
 
+  .imagenes-laterales img:hover {
+    transform: scale(1.05);
+  }
+
+  /* --- Ajuste para celulares --- */
+  @media (max-width: 768px) {
+    .imagenes-laterales img {
+      width: 90%;     /* que ocupen casi todo el ancho */
+      display: block;
+      margin: 10px auto;  /* centradas */
+    }
+  }
+</style>
+  
 </body>
 </html>
+
 
 
 
