--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CURSO MULTIDISCIPLINARIO DE ACTUALIZACIÓN EN TEMAS MÉDICOS Y QUIRÚRGICOS</title>
-
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -24,70 +23,55 @@
       justify-content: center;
       padding: 20px 40px;
       gap: 20px;
-      flex-wrap: wrap;
       text-align: left;
+      flex-wrap: nowrap;
     }
 
     header img {
-      width: 120px;
+      width: 100px;
       height: auto;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2.2em;
+      font-size: 2em;
       line-height: 1.2;
+      max-width: 750px;
       word-wrap: break-word;
-      overflow-wrap: break-word;
       white-space: normal;
-      max-width: 800px;
     }
 
-    /* ===== CONTENIDO PRINCIPAL ===== */
-    main {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      max-width: 1200px;
-      margin: auto;
+    /* ===== SECCIONES ===== */
+    section {
       padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
     }
 
-    .programa {
-      flex-basis: 65%;
+    h2 {
+      color: #004d40;
+      border-bottom: 2px solid #004d40;
+      padding-bottom: 5px;
     }
 
-    .imagenes-laterales {
-      flex-basis: 30%;
+    /* ===== IMÁGENES DEL CURSO ===== */
+    .imagenes-curso {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      flex-wrap: wrap;
       justify-content: center;
-      gap: 80px;
-      margin-top: 150px;
+      gap: 40px;
+      margin-top: 40px;
     }
 
-    .imagenes-laterales img {
+    .imagenes-curso img {
       width: 100%;
       max-width: 250px;
       border-radius: 10px;
       transition: transform 0.3s ease;
     }
 
-    .imagenes-laterales img:hover {
+    .imagenes-curso img:hover {
       transform: scale(1.05);
-    }
-
-    /* ===== ADAPTACIÓN PARA TABLET ===== */
-    @media (max-width: 1024px) {
-      header h1 {
-        font-size: 2em;
-      }
-
-      .imagenes-laterales img {
-        max-width: 300px;
-      }
     }
 
     /* ===== ADAPTACIÓN PARA CELULARES ===== */
@@ -99,57 +83,48 @@
       }
 
       header img {
-        width: 100px;
+        width: 90px;
       }
 
       header h1 {
-        font-size: 1.6em;
+        font-size: 1.5em;
         line-height: 1.3;
-        padding: 0 10px;
-        white-space: normal;
+        max-width: 95%;
         text-align: center;
       }
 
-      main {
-        flex-direction: column;
-        align-items: center;
+      .imagenes-curso {
+        gap: 25px;
       }
 
-      .programa {
-        flex-basis: 100%;
-      }
-
-      .imagenes-laterales {
-        flex-basis: 100%;
-        flex-direction: row;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 40px;
-        margin-top: 50px;
-      }
-
-      .imagenes-laterales img {
-        max-width: 320px; /* Más grandes en celular */
+      .imagenes-curso img {
+        max-width: 330px; /* Más grandes en celular */
         width: 90%;
       }
     }
 
-    /* ===== PANTALLAS MUY PEQUEÑAS ===== */
     @media (max-width: 480px) {
       header h1 {
         font-size: 1.4em;
-        line-height: 1.4;
       }
 
-      .imagenes-laterales img {
+      .imagenes-curso img {
         max-width: 350px;
-        width: 95%;
       }
+    }
+
+    footer {
+      background-color: #004d40;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
     }
   </style>
 </head>
 
- 
+
+
   
 <body style="background-color:#A0A434;">
   <!-- HEADER -->
@@ -158,7 +133,6 @@
          alt="Logo del Seminario" 
          style="width:360px; display:block; height:auto; margin-left:10px;">
     <div>
-      <img src="https://via.placeholder.com/120x120" alt="Logo del curso">
       <h1 style="margin:0;">CURSO MULTIDISCIPLINARIO DE ACTUALIZACIÓN EN TEMAS MÉDICOS Y QUIRÚRGICOS</h1>
       <p style="margin:5px 0 0;">27 y 28 de noviembre de 2025 · Auditorio del Hospital Militar de la III DE</p>
     </div>
@@ -385,7 +359,7 @@
 </style>
 
   
-<div class="imagenes-laterales">    
+<div class="imagenes-curso">    
     <img src="IMAGENES/fachada.jpg" 
          style="width: 100%; max-width: 350px; border-radius: 18px; box-shadow: 0 6px 18px rgba(0,0,0,0.3); object-fit: cover;">
     <img src="IMAGENES/sala_operaciones.jpeg" 
@@ -547,6 +521,7 @@
   
 </body>
 </html>
+
 
 
 
