--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 
   <!-- Columna izquierda: texto -->
-  <div style="flex-basis: 70%; color: black;">
+  <div style="flex-basis: 100%;">
     <h2 style="margin-bottom: 5px; color: #3C3200;">PROGRAMACIÓN</h2>
     <h3 style="margin-top: 25px; margin-bottom: 8px; color:black;">JUEVES 27 DE NOVIEMBRE DE 2025</h3>
     <div class="espacio"></div>
@@ -319,7 +319,7 @@
   </div>
 
   
-<div class="imagenes-curso">    
+<!--div class="imagenes-curso">    
     <img src="IMAGENES/fachada.jpg" 
          style="width: 100%; max-width: 350px; border-radius: 18px; box-shadow: 0 6px 18px rgba(0,0,0,0.3); object-fit: cover;">
     <img src="IMAGENES/sala_operaciones.jpeg" 
@@ -332,7 +332,7 @@
          style="width: 100%; max-width: 350px; border-radius: 18px; box-shadow: 0 6px 18px rgba(0,0,0,0.3); object-fit: cover;">
     <img src="IMAGENES/trabajando.JPG" 
          style="width: 100%; max-width: 350px; border-radius: 18px; box-shadow: 0 6px 18px rgba(0,0,0,0.3); object-fit: cover;">
-  </div>
+</div-->
 </section>
 
 
@@ -481,6 +481,7 @@
   
 </body>
 </html>
+
 
 
 
