--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CURSO MULTIDISCIPLINARIO DE ACTUALIZACIÓN EN TEMAS MÉDICOS Y QUIRÚRGICOS</title>
+  <title>CURSO MULTIDISCIPLINARIO DE ACTUALIZACIÓN EN TEMAS MÉDICO QUIRÚRGICOS</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -481,6 +481,7 @@
   
 </body>
 </html>
+
 
 
 
